Represent domain snapshots as immutable records